k8s_xenia/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: worker:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "300m"
